force-app/main/default/objects/Booking__c/fields/Book_Item__c.field-meta.xml
<CustomField>
    <fullName>Book_Item__c</fullName>
    <label>Book Item</label>
    <referenceTo>Book_Item__c</referenceTo>
    <relationshipLabel>Bookings</relationshipLabel>
    <relationshipName>Bookings</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>