force-app/main/default/objects/Booking__c/fields/Book_Title__c.field-meta.xml
<CustomField>
    <fullName>Book_Title__c</fullName>
    <formula>Book_Item__r.Book_Title__r.Name</formula>
    <label>Book Title</label>
    <type>Text</type>
</CustomField>