force-app/main/default/objects/Booking__c/fields/Booking_Period1__c.field-meta.xml
<CustomField>
    <fullName>Booking_Period1__c</fullName>
    <label>Booking Period1</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>7 Days</fullName>
            </value>
            <value>
                <fullName>14 Days</fullName>
            </value>
            <value>
                <fullName>21 Days</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>