force-app/main/default/objects/Booking__c/fields/Booking_Period__c.field-meta.xml
<CustomField>
    <fullName>Booking_Period__c</fullName>
    <formula>CASE(Booking_Status__c, &quot;Active - Week1&quot;, &quot;7 Days&quot;, &quot;Extended - Week 2&quot;, &quot;14 Days&quot;, &quot;21 Days&quot;)</formula>
    <label>Booking Period</label>
    <type>Text</type>
</CustomField>