force-app/main/default/objects/Booking__c/fields/Booking_Status__c.field-meta.xml
<CustomField>
    <fullName>Booking_Status__c</fullName>
    <label>Booking Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Active - Week1</fullName>
            </value>
            <value>
                <fullName>Extended - Week 2</fullName>
            </value>
            <value>
                <fullName>Extended - Week 3</fullName>
            </value>
            <value>
                <fullName>Overdue</fullName>
            </value>
            <value>
                <fullName>Closed - Not Returned</fullName>
            </value>
            <value>
                <fullName>Closed - Returned</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>