force-app/main/default/objects/Booking__c/fields/Grace_Period__c.field-meta.xml
<CustomField>
    <fullName>Grace_Period__c</fullName>
    <formula>3</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Grace Period</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>