force-app/main/default/objects/Booking__c/fields/Reader__c.field-meta.xml
<CustomField>
    <fullName>Reader__c</fullName>
    <label>Reader</label>
    <referenceTo>Reader__c</referenceTo>
    <relationshipLabel>Bookings</relationshipLabel>
    <relationshipName>Bookings</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>