force-app/main/default/objects/Booking__c/fields/Return_Due_Date__c.field-meta.xml
<CustomField>
    <fullName>Return_Due_Date__c</fullName>
    <formula>Booking_Date__c + 
CASE(Booking_Period__c,
    &quot;7 Days&quot;, 7,
    &quot;14 Days&quot;, 14,
    &quot;21 Days&quot;, 21,
    0
)</formula>
    <label>Return Due Date</label>
    <type>Date</type>
</CustomField>