force-app/main/default/objects/Booking__c/fields/Return_Due_Date_with_Grace__c.field-meta.xml
<CustomField>
    <fullName>Return_Due_Date_with_Grace__c</fullName>
    <formula>IF(WEEKDAY(Return_Due_Date__c + Grace_Period__c)=1, Return_Due_Date__c + Grace_Period__c + 1, Return_Due_Date__c + Grace_Period__c)</formula>
    <label>Return Due Date with Grace</label>
    <type>Date</type>
</CustomField>