force-app/main/default/objects/Booking__c/recordTypes/Non_student_Reader.recordType-meta.xml
<RecordType>
    <fullName>Non_student_Reader</fullName>
    <active>true</active>
    <label>Non-student Reader</label>
</RecordType>