force-app/main/default/objects/Booking__c/recordTypes/Student_Reader.recordType-meta.xml
<RecordType>
    <fullName>Student_Reader</fullName>
    <active>true</active>
    <label>Student Reader</label>
</RecordType>