force-app/main/default/objects/Booking__c/validationRules/Book_Item_is_Not_Available.validationRule-meta.xml
<ValidationRule>
    <fullName>Book_Item_is_Not_Available</fullName>
    <active>false</active>
    <errorConditionFormula>NOT(ISPICKVAL( Book_Item__r.Status__c, &quot;Available&quot;))</errorConditionFormula>
    <errorDisplayField>Book_Item__c</errorDisplayField>
    <errorMessage>Book Item must be available.</errorMessage>
</ValidationRule>