force-app/main/default/objects/Booking__c/validationRules/Reader_Has_7_Active_Bookings.validationRule-meta.xml
<ValidationRule>
    <fullName>Reader_Has_7_Active_Bookings</fullName>
    <active>true</active>
    <errorConditionFormula>Reader__r.Active_Bookings__c =7</errorConditionFormula>
    <errorDisplayField>Reader__c</errorDisplayField>
    <errorMessage>Reader can borrow only up to seven books concurrently.</errorMessage>
</ValidationRule>