force-app/main/default/objects/Booking__c/validationRules/Reader_is_Not_Active.validationRule-meta.xml
<ValidationRule>
    <fullName>Reader_is_Not_Active</fullName>
    <active>true</active>
    <errorConditionFormula>NOT(ISPICKVAL( Reader__r.Status__c, &quot;Active&quot;))</errorConditionFormula>
    <errorDisplayField>Reader__c</errorDisplayField>
    <errorMessage>Reader must be in Active status.</errorMessage>
</ValidationRule>