force-app/main/default/objects/Booking__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Booking_Status__c</columns>
    <columns>Book_Item__c</columns>
    <columns>Booking_Date__c</columns>
    <columns>Booking_Period1__c</columns>
    <columns>Return_Due_Date__c</columns>
    <columns>Book_Title__c</columns>
    <columns>Reader__c</columns>
    <columns>RECORDTYPE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>